--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     min-height: 10vh;
+    padding-top: 20px;
 }
 
 .nav-links{
@@ -31,7 +32,7 @@ nav{
 .nav-links li{
     padding-left: 10rem;
     font-size: 1.5rem;
-    color: rgb(78, 72, 72);
+    color: rgb(97, 88, 88);
 
 }
 
